Possible fix for broken styles in ngw environment.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,7 +28,7 @@ figure.testing .container {
   }
 }
 
-.interactive-dream-team {
+.interactive {
 
 	/**
 	 * Player selection
